# black_hole_vs

./: .gitignore  Base.h  CMakeLists.txt  Camera.cpp  Camera.h  INSTALL.md  PROJECT_SUCCESS_SUMMARY.md  README.md  README_SIMPLE.txt  Shader.cpp  Shader.h  blackhole_build_success.bat  blackhole_demo.sln  blackhole_demo.vcxproj  blackhole_demo.vcxproj.filters  build.bat  build_with_mingw.bat  ffimage.cpp  ffimage.h  glad.c  glad_loader.c  main0.cpp  main1.cpp  main2.cpp  main_bh.cpp  openGLFW.cpp  quick_build.bat  rebuild.bat  run_blackhole_demo.bat  run_simple.bat  setup.bat  setup_dlls.bat  start_blackhole.bat  test.cpp  test_build.bat  一键运行.bat  使用说明.txt  开发指南.md  快速编译.bat  编译程序.bat  (+2 more)
Debug/: blackhole_demo.exe.recipe  blackhole_demo.ilk  blackhole_demo.vcxproj.FileListAbsolute.txt  vc143.idb
Debug/blackhole_demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  blackhole_demo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glad/: glad.h
shader/: blackholef - 副本.glsl  blackholef.glsl  blackholef0.glsl  blackholef1.glsl  blackholef2.glsl  blackholef3.glsl  blackholef4稳定参考系.glsl  blackholef5增加方向鲁棒性.glsl  blackholef6.glsl  blackholef6多重采样抗锯齿.glsl  blackholef7.glsl  blackholef8吸积盘.glsl  blackholev.glsl  dirShaderf.glsl  envShaderf.glsl  envShaderv.glsl  fragmentShader.glsl  screenShaderf.glsl  screenShaderv.glsl  skyShaderf.glsl  skyShaderv.glsl  vertexShader.glsl
x64/Debug/: vc143.idb
x64/Debug/blackhole_demo.tlog/: CL.command.1.tlog  blackhole_demo.lastbuildstate
